fixed a tag hoverflow

--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -27,6 +27,8 @@
 .link {
     text-decoration: none;
     color: inherit;
+    display: block;
+    width: fit-content;
 }
 
 .tag {
